feat(security): add role-based authentication using Spring Security

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,9 @@
         <a class="nav-link" th:href="@{/reg}">Register</a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" th:href="@{/users}">List of Users</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" th:href="@{/logout}">Logout</a>
       </li>
     </ul>
